2004-10-28 David Anderson <davea@sgi.com>
      * DWARFDUMPCOPYRIGHT config.h defs.h dwarfdump.c globals.h
	makename.c makename.h print_die.c print_exception_tables.c 
	print_reloc.c print_sections.c tag_attr.c tag_attr.list
	tag_tree.c tag_tree.list: Copyright update, SGI
        corporate address change.

2004-10-26 David Anderson <davea@sgi.com>
      * acconfig.h: removed. Was old style autoconf usage.
      * configure.in: Updated AC_DEFINE usage, adding args 2 & 3.
      * config.guess: Updated. timestamp='2004-06-11'.
      * config.sub: Updated.  timestamp='2004-03-12'.
      * configure config.h.in: regenerated with autoconf 2.58.

2004-05-14 David Anderson <davea@sgi.com>

      * print_die.c (print_die_and_children): Change to iteration
        on siblings (still recursing on children).

	
2004-03-30 David Anderson <davea@sgi.com>
      * dwarfdump.c (main): getopt() string should contain k:g
        not kg:    Thanks to Peter Seiderer for pointing this out.

2003-12-31 David Anderson <davea@sgi.com>
      * README: Added configure example.
      * Makefile.in: Removed bogus LIBS line, updated copyright date.
      * acconfig.h: Added LGPL copyright to match libdwarf
	Silly, but it matches libdwarf version boilerplate.
      * config.guess config.sub: new versions from automake-1.6.
      * config.h.in configure: Regenerated.


2003-10-06   David Anderson <davea@sgi.com>
     * dwarfdump.c print_sections.c: applied indent(1).
     * print_die.c: applied indent and added ; after
       invocations of macros PUSH_DIE_STACK POP_DIE_STACK SPACE
       as these were confusing indent a bit.
       The indent control file .indent.pro contained:
  	-bad -bap -nbbo -br -ce -brs
  	-l72  -lc72  -hnl  -nprs
  	-fca -i4  -lp -psl -npcs 
        


2003-10-02   David Anderson <davea@sgi.com>
     * dwarfdump.c: Add -g to indicate use of older 
       location entry code in libdwarf.  So dwarf_loclist 
       and dwarf_loclist_n are testable.