@@ -800,6 +800,18 @@ print_frame_inst_bytes(Dwarf_Debug dbg,
 	    case DW_CFA_nop:
 		printf("\t%2u DW_CFA_nop\n", loff);
 		break;
+
+	    case DW_CFA_def_cfa_expression : /* DWARF3 */
+		break;
+	    case DW_CFA_expression       : /* DWARF3 */
+		break;
+            case DW_CFA_cfa_offset_extended_sf : /* DWARF3 */
+		break;
+            case DW_CFA_def_cfa_sf       :        /* DWARF3 */
+		break;
+            case DW_CFA_def_cfa_offset_sf : /* DWARF3 */
+		break;
+
 #ifdef DW_CFA_GNU_window_save
 	    case DW_CFA_GNU_window_save:{
 		    /* no information: this just tells unwinder to
@@ -889,7 +901,7 @@ print_frames(Dwarf_Debug dbg)
 		dwarf_get_fde_list(dbg, &cie_data, &cie_element_count,
 				   &fde_data, &fde_element_count, &err);
 	} else {
-	    /* this is gnu g++ exceptions in a .eh_frame section. Which 
+	    /* This is gnu g++ exceptions in a .eh_frame section. Which 
 	       is just like .debug_frame except that the empty, or
 	       'special' CIE_id is 0, not -1 (to distinguish fde from
 	       cie). And the augmentation is "eh". As of egcs-1.1.2
@@ -1287,37 +1299,160 @@ print_pubnames(Dwarf_Debug dbg)
     }
 }
 
+
+struct macro_counts_s {
+	long mc_start_file;
+	long mc_end_file;
+	long mc_define;
+	long mc_undef;
+	long mc_extension;
+	long mc_code_zero;
+	long mc_unknown;
+};
+
+static void 
+print_one_macro_entry_detail(long i, 
+		char *type,
+		struct Dwarf_Macro_Details_s *mdp)
+{
+    /*"DW_MACINFO_*: section-offset file-index [line] string\n" */
+    if(mdp->dmd_macro) {
+        printf( "%3ld %s: %6llu %2lld [%4lld] \"%s\" \n",
+                        i,
+                        type,
+                        mdp->dmd_offset,
+                        mdp->dmd_fileindex,
+                        mdp->dmd_lineno,
+                          mdp->dmd_macro);
+    }else {
+        printf( "%3ld %s: %6llu %2lld [%4lld] 0\n",
+                        i,
+                        type,
+                        mdp->dmd_offset,
+                        mdp->dmd_fileindex,
+                        mdp->dmd_lineno );
+    }
+
+}
+
+static void 
+print_one_macro_entry(long i, 
+		struct Dwarf_Macro_Details_s *mdp,
+		struct macro_counts_s*counts)
+{
+
+   switch (mdp->dmd_type) {
+   case  0:
+	counts->mc_code_zero++;
+        print_one_macro_entry_detail(i,"DW_MACINFO_type-code-0",mdp);
+	break;
+
+   case  DW_MACINFO_start_file :
+	counts->mc_start_file++;
+        print_one_macro_entry_detail(i,"DW_MACINFO_start_file",mdp);
+	break;
+
+   case  DW_MACINFO_end_file  :
+	counts->mc_end_file++;
+        print_one_macro_entry_detail(i,"DW_MACINFO_end_file  ",mdp);
+	break;
+
+   case  DW_MACINFO_vendor_ext :
+	counts->mc_extension++;
+        print_one_macro_entry_detail(i,"DW_MACINFO_vendor_ext",mdp);
+	break;
+
+   case DW_MACINFO_define:
+	counts->mc_define++;
+        print_one_macro_entry_detail(i,"DW_MACINFO_define    ",mdp);
+	break;
+
+   case DW_MACINFO_undef:
+	counts->mc_undef++;
+        print_one_macro_entry_detail(i,"DW_MACINFO_undef     ",mdp);
+	break;
+
+   default:
+	{
+        char  create_type[50]; /* More than large enough. */
+	counts->mc_unknown++;
+	snprintf(create_type,sizeof(create_type),
+			"DW_MACINFO_0x%x", mdp->dmd_type);	
+        print_one_macro_entry_detail(i,create_type,mdp);
+	}
+	break;
+   }
+}
+
 /* print data in .debug_macinfo */
- /*ARGSUSED*/ extern void
+/* FIXME: should print name of file whose index is in macro data
+   here  --  somewhere.
+*/
+/*ARGSUSED*/ extern void
 print_macinfo(Dwarf_Debug dbg)
 {
     Dwarf_Off offset = 0;
     Dwarf_Unsigned max = 0;
     Dwarf_Signed count;
+    long group = 0;
     Dwarf_Macro_Details *maclist;
     int lres;
 
     printf("\n.debug_macinfo\n");
+
     while ((lres = dwarf_get_macro_details(dbg, offset,
 					   max, &count, &maclist,
 					   &err)) == DW_DLV_OK) {
-	Dwarf_Signed i;
+	long i;
+	struct macro_counts_s  counts;
 
+
+	memset(&counts, 0,sizeof(counts));
+
+        printf("\n");
+        printf("compilation-unit .debug_macinfo # %ld\n",group);
+        printf("num name section-offset file-index [line] \"string\"\n");
 	for (i = 0; i < count; i++) {
-	    switch (maclist[i].dmd_type) {
-	    case DW_MACINFO_define:
-		printf("[%lld] #define %s\n",
-		       maclist[i].dmd_lineno, maclist[i].dmd_macro);
-		break;
-	    case DW_MACINFO_undef:
-		printf("[%lld] #undef %s\n",
-		       maclist[i].dmd_lineno, maclist[i].dmd_macro);
-		break;
-	    }
+	    struct Dwarf_Macro_Details_s *mdp = &
+			maclist[i];
+	    print_one_macro_entry(i,mdp,&counts);
 	}
 
+	if(counts.mc_start_file ==  0) {
+	  printf("DW_MACINFO file count of zero is invalid DWARF2/3\n");
+	}
+	if(counts.mc_start_file != counts.mc_end_file) {
+	  printf("Counts of DW_MACINFO file (%ld) end_file (%ld) "
+		"do not match!.\n",
+		counts.mc_start_file,counts.mc_end_file);
+	}
+	if(counts.mc_code_zero < 1) {
+	  printf("Count of zeros in macro group should be non-zero "
+		"(1 preferred), count is %ld\n",
+		counts.mc_code_zero );
+	}
+	printf("Macro counts: start file %ld, "
+		"end file %ld, "
+		"define %ld, "
+		"undef %ld "
+		"ext %ld, "
+		"code-zero %ld, "
+		"unknown %ld\n",
+		counts.mc_start_file,
+		counts.mc_end_file,
+		counts.mc_define,
+		counts.mc_undef,
+		counts.mc_extension,
+		counts.mc_code_zero,
+		counts.mc_unknown);
+
+
+	/* int type=  maclist[count - 1].dmd_type; */
+	/* ASSERT: type is zero */
+        
 	offset = maclist[count - 1].dmd_offset + 1;
 	dwarf_dealloc(dbg, maclist, DW_DLA_STRING);
+	++group;
     }
     if (lres == DW_DLV_ERROR) {
 	print_error(dbg, "dwarf_get_macro_details", lres, err);
