@@ -1,3 +1,8 @@
+Mar 18, 2005
+  In correcting printing of macro information the format
+  of the macro (-m) output has changed substantially.
+  Much more complete now.  Still could use enhancement.
+
 Oct 28, 2004
   Updated contact address in copyright: SGI moved 1/4 mile
   to a new address: 1500 Crittenden Lane.
